# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1071 2011/02/17 15:21:39 mpagano Exp $

*git-sources-2.6.38_rc5-r2 (17 Feb 2011)

  17 Feb 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc5-r2.ebuild:
  Version bump

*git-sources-2.6.38_rc5-r1 (17 Feb 2011)

  17 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc5-r1.ebuild:
  Version bump

*git-sources-2.6.38_rc5 (16 Feb 2011)

  16 Feb 2011; Mike Pagano <mpagano@gentoo.org> -git-sources-2.6.38_rc3.ebuild,
  -git-sources-2.6.38_rc3-r1.ebuild, -git-sources-2.6.38_rc3-r2.ebuild,
  -git-sources-2.6.38_rc3-r3.ebuild, -git-sources-2.6.38_rc3-r4.ebuild,
  -git-sources-2.6.38_rc3-r5.ebuild, -git-sources-2.6.38_rc3-r6.ebuild,
  +git-sources-2.6.38_rc5.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.38_rc4-r9 (16 Feb 2011)

  16 Feb 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc4-r9.ebuild:
  Version bump

*git-sources-2.6.38_rc4-r8 (14 Feb 2011)

  14 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc4-r8.ebuild:
  Version bump

*git-sources-2.6.38_rc4-r7 (14 Feb 2011)

  14 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc4-r7.ebuild:
  Version bump

*git-sources-2.6.38_rc4-r6 (13 Feb 2011)

  13 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc4-r5.ebuild, +git-sources-2.6.38_rc4-r6.ebuild:
  Version bump

*git-sources-2.6.38_rc4-r5 (12 Feb 2011)

  12 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc4-r5.ebuild:
  Version bump

*git-sources-2.6.38_rc4-r4 (11 Feb 2011)

  11 Feb 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc4-r4.ebuild:
  Version bump

*git-sources-2.6.38_rc4-r3 (11 Feb 2011)

  11 Feb 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.38_rc4-r3.ebuild:
  Version bump
