@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1071 2011/02/17 15:21:39 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1072 2011/02/18 15:51:54 mpagano Exp $
+
+*git-sources-2.6.38_rc5-r3 (18 Feb 2011)
+
+  18 Feb 2011; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.38_rc5-r3.ebuild:
+  Version bump
 
 *git-sources-2.6.38_rc5-r2 (17 Feb 2011)
 
